--- a/style.css
+++ b/style.css
@@ -11,6 +11,21 @@ canvas {
 	width: 100%;
 	height: 100%;
 }
+.error-container {
+	display: none;
+	justify-content: center;
+	align-items: center;
+	height: 100vh;
+	color: rgb(5, 40, 100);
+}
 #collisionCanvas {
 	opacity: 0;
+}
+@media screen and (max-width: 790px) {
+	.canvas-container {
+		display: none;
+	}
+	.error-container {
+		display: flex;
+	}
 }
